Update Zoom API integration and frontend configuration
- Refactored Zoom API access token retrieval in zoomAPI.js
- Updated meetingBot.js with local development URL
- Modified client-view.js with actual Zoom SDK key and meeting details
- Updated index.html page title and heading

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Zoom Meeting SDK Sample JavaScript</title>
+    <title>Zoom Meeting</title>
 
   <!-- For Client View -->
   <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.13.0/css/bootstrap.css" />
@@ -18,7 +18,7 @@
   <body>
 
     <main>
-      <h1>Zoom Meeting SDK Sample JavaScript</h1>
+      <h1>Zoom Meeting</h1>
 
       <!-- For Component View -->
       <div id="meetingSDKElement">
