--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
     <title>Zoom Meeting</title>
 
   <!-- For Client View -->
-  <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.13.0/css/bootstrap.css" />
-  <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.13.0/css/react-select.css" />
+  <link type="text/css" rel="stylesheet" href="https://source.zoom.us/3.1.6/css/bootstrap.css" />
+  <link type="text/css" rel="stylesheet" href="https://source.zoom.us/3.1.6/css/react-select.css" />
 
     <link rel="stylesheet" href="styles.css">
 
@@ -20,31 +20,33 @@
     <main>
       <h1>Zoom Meeting</h1>
 
+      <!-- 添加输入框接受 URL -->
+      <div class="input-container">
+        <input type="text" id="meeting_url" placeholder="输入 Zoom 会议链接" />
+        <button id="join_meeting" onClick="getSignature()">加入会议</button>
+      </div>
+
       <!-- For Component View -->
       <div id="meetingSDKElement">
         <!-- Zoom Meeting SDK Rendered Here -->
       </div>
 
-      <button id="join_meeting" onClick="getSignature()">Join Meeting</button>
-
-    
-
     </main>
 
     <!-- For Component and Client View -->
-    <script src="https://source.zoom.us/2.13.0/lib/vendor/react.min.js"></script>
-    <script src="https://source.zoom.us/2.13.0/lib/vendor/react-dom.min.js"></script>
-    <script src="https://source.zoom.us/2.13.0/lib/vendor/redux.min.js"></script>
-    <script src="https://source.zoom.us/2.13.0/lib/vendor/redux-thunk.min.js"></script>
-    <script src="https://source.zoom.us/2.13.0/lib/vendor/lodash.min.js"></script>
+    <script src="https://source.zoom.us/3.1.6/lib/vendor/react.min.js"></script>
+    <script src="https://source.zoom.us/3.1.6/lib/vendor/react-dom.min.js"></script>
+    <script src="https://source.zoom.us/3.1.6/lib/vendor/redux.min.js"></script>
+    <script src="https://source.zoom.us/3.1.6/lib/vendor/redux-thunk.min.js"></script>
+    <script src="https://source.zoom.us/3.1.6/lib/vendor/lodash.min.js"></script>
 
     <!-- For Client View -->
-    <script src="https://source.zoom.us/zoom-meeting-2.13.0.min.js"></script>
+    <script src="https://source.zoom.us/zoom-meeting-3.1.6.min.js"></script>
     <script type="text/javascript" src="client-view.js"></script>
 
 
     <!-- For Component View -->
-    <!-- <script src="https://source.zoom.us/2.13.0/zoom-meeting-embedded-2.13.0.min.js"></script> -->
+    <!-- <script src="https://source.zoom.us/2.18.0/zoom-meeting-embedded-2.18.0.min.js"></script> -->
     <!-- <script type="text/javascript" src="component-view.js"></script> -->
 
   </body>
